--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -60,6 +60,22 @@
     transition: background-color 0.2s;
 }
 
-.countdownButton:hover {
+.countdownButton:not(:disabled):hover {
     background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+    background: var(--white) ;
+    color: var(--title);
+}
+
+.countdownButtonActive:hover {
+    background: var(--red) ;
+    color: var(--white);
+}
+
+.countdownButtonActive:disabled {
+    background: var(--white) ;
+    color: var(--text);
+    cursor: not-allowed;
 }
